# mcalc

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: Field.svelte  ToolView.svelte  dateutil.ts  format.ts  search.ts  types.ts
src/lib/tools/: finansial.ts  geometri.ts  index.ts  kesehatan.ts  konversi.ts  matematika.ts  tanggal.ts
